--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
+<meta name="description" content="Dave Benvenuti is a Freelance Software Engineer/Architect specializing in Ruby on Rails, node.js, and frontend Javascript development.">
+
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
